<resources>
    <string name="app_name">Crypto Check</string>
    <string name="btc">Bitcoin</string>
    <string name="eth">Ethereum</string>
    <string name="result">Result</string>
    <string name="validate">Validate</string>
    <string name="share">Share</string>
    <string name="coin_type">Coin Type : %1$s</string>
    <string name="valid_address">Valid %1$s Address</string>
    <string name="invalid_address">Invalid %1$s Address</string>
    <string name="rescan">Rescan</string>
</resources>