<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#101D25"
        tools:context=".ResultsActivity">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/result"
            android:textColor="@color/TextColorGrey"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/scanned_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/result_text_bg"
            android:maxLines="3"
            android:padding="12dp"
            android:textColor="#C3DDDC"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result"
            tools:text="0xjhvfalfijbfiweug783410" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/coin_type_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textColor="@color/TextColorGrey"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/scanned_result"
            app:layout_constraintStart_toStartOf="@+id/scanned_result"
            app:layout_constraintTop_toBottomOf="@+id/scanned_result"
            tools:text="@string/coin_type" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/validated_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/TextColorGrey"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/coin_type_tv"
            app:layout_constraintStart_toStartOf="@+id/coin_type_tv"
            app:layout_constraintTop_toBottomOf="@+id/coin_type_tv"
            tools:text="Valid Address" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/rescan_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rescan"
            android:textColor="@color/TextColorGrey"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="40dp"
            android:drawableStart="@drawable/redo"
            android:drawablePadding="4dp"
            app:layout_constraintBottom_toTopOf="@+id/validate_button"
            app:layout_constraintEnd_toEndOf="@+id/validated_result"
            app:layout_constraintStart_toStartOf="@+id/validated_result" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/validate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/text_bg"
            android:padding="14dp"
            android:text="@string/validate"
            android:textAlignment="center"
            android:textColor="@color/TextColor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/share_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/share_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/text_bg"
            android:padding="14dp"
            android:text="@string/share"
            android:textAlignment="center"
            android:textColor="@color/TextColor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>